change: backend maintainability fixes, A Rating in backend (SonarQube)